# gingerit

./: .coveragerc  .gitignore  .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  index.html  params.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.txt  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
gingerit/: __init__.py  gingerit.py  test.py
tests/: test_gingerit.py
