[tool.poetry]
name = "gingerit"
version = "0.6.1"
description = """
Correcting spelling and grammar mistakes based on the context of complete \
entences. Wrapper around the gingersoftware.com API\
"""
authors = ["Tim Kleinschmdit <tim.kleinschmidt@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Azd325/gingerit"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]



[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
