[tool.poetry]
name = "gingerit"
version = "0.8.0"
description = """
Correcting spelling and grammar mistakes based on the context of complete \
entences. Wrapper around the gingersoftware.com API\
"""
authors = ["Tim Kleinschmdit <tim.kleinschmidt@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Azd325/gingerit"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
